Finally correcting the information and adding the correct colors in dark mode

--- a/src/components/PartyDetails.css
+++ b/src/components/PartyDetails.css
@@ -46,6 +46,9 @@
 .sparkle1 { top: 20%; left: 10%; animation-delay: 0s; }
 .sparkle2 { bottom: 30%; right: 15%; animation-delay: 3s; }
 .sparkle3 { top: 50%; right: 40%; animation-delay: 6s; }
+.sparkle4 { top: 10%; left: 80%; animation-delay: 0s; }
+.sparkle5 { bottom: 6%; right: 5%; animation-delay: 3s; }
+.sparkle6 { top: 70%; right: 70%; animation-delay: 6s; }
 
 @keyframes float {
   0%, 100% { transform: translateY(0) scale(1); opacity: 0.6; }
@@ -56,7 +59,6 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  /* background: url('/images/fondo.jpg') center/cover no-repeat; o tu fondo */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,7 +81,7 @@
 
   /* máscara circular tipo linterna */
   -webkit-mask: radial-gradient(
-    circle 350px at var(--x, 50%) var(--y, 50%),
+    circle 400px at var(--x, 50%) var(--y, 50%),
     transparent 0%,
     black 80%
   );
@@ -87,7 +89,7 @@
   -webkit-mask-composite: destination-out;
   
   mask: radial-gradient(
-    circle 350px at var(--x, 50%) var(--y, 50%),
+    circle 400px at var(--x, 50%) var(--y, 50%),
     transparent 0%,
     black 80%
   );
